# facilities

./: .gitignore  Cargo.toml
books/src/: main.rs
http-client/: Cargo.toml
http-server/: Cargo.toml
http-server/src/: handlers.rs  main.rs  models.rs
one-zero-four-client/: Cargo.toml
one-zero-four-client/src/: lib.rs  main.rs
one-zero-four-client/src/model/: messages.rs
one-zero-four-client/src/tool/: mod.rs
one-zero-four-client/tests/: test.rs
os-checker/: Cargo.toml
os-checker/src/: lib.rs
server/: Cargo.toml  log4rs.yaml
server/handle-errors/src/: lib.rs
server/src/: main.rs  store.rs
server/src/routes/: answer.rs  question.rs
server/src/types/: answer.rs  question.rs
test-json/: Cargo.toml
test-json/src/: main.rs
test-warp/: Cargo.toml
test-warp/src/: main.rs
websocket/: Cargo.toml
