[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "ocpp-server"

[[bin]]
name = "ocpp-client"

[[bin]]
name = "client"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18"
futures-util = "0.3"
url = "2.2"
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
rust-ocpp = { version = "1.0", features = ["v1_6"] }
warp = "0.3"